--- a/.harness/kubernetes/tweis-quantum-bank-backend-service.yaml
+++ b/.harness/kubernetes/tweis-quantum-bank-backend-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hsaab-quantum-bank-backend-deployment-service
-  namespace: hsaab
+  name: tweis-quantum-bank-backend-deployment-service
+  namespace: tweis
   annotations:
     cloud.google.com/neg: '{"ingress":true}'
 spec:
@@ -12,4 +12,4 @@ spec:
       targetPort: 5000
       protocol: TCP
   selector:
-    app: hsaab-quantum-bank-backend-deployment
+    app: tweis-quantum-bank-backend-deployment
