--- a/.harness/hsaabdevenv.yaml
+++ b/.harness/hsaabdevenv.yaml
@@ -1,6 +1,6 @@
 environment:
-  name: hsaab-dev-env
-  identifier: hsaabdevenv
+  name: tweis-dev-env
+  identifier: tweisdevenv
   accountId: 6_vVHzo9Qeu9fXvj-AcbCQ
   orgIdentifier: SE_Sandbox
   projectIdentifier: devX_super_team
